# IML4Finance

./: .gitignore  IML4Finance.code-workspace  Interpretable ML-MacOS.code-profile  Interpretable ML.code-profile  conda_env_export.py  conda_env_fixed.yml  conda_env_iml4finance_2026.yml  conda_env_iml4finance_2026_lock.yml  conda_env_requirements.yml  conda_env_requirements_MacOS.yml  conda_env_uv_202512.yml  conda_env_uv_202601.yml  env_AutoGluon_202510_ubuntu.yml  env_requirements.txt  environment.yml  precision_recall_f1_example.xlsx  pyproject.toml  quiz02-02.py  quiz02-04.py  quiz03-01.py  quize 03-01.xlsx  readme.html  readme.md  score_PDO_example.xlsx  shap_example.xlsx
.github/: copilot-instructions.md
Examples/: score_PDO_example.xlsx
Labs/: Lab02_eda_report_compare_common_features.html  Lab02_eda_report_rejected_train.html  Lab04_eda_compare_train_tuning.html  Lab04_eda_compare_train_tuning_ft.html  Lab_01.html  Lab_01.qmd  Lab_02.html  Lab_02.qmd  Lab_03.html  Lab_03.qmd  Lab_04.html  Lab_04.qmd
Lectures/: Lab 01.html  Lab 01.qmd  Lab 02.html  Lab 02.qmd  Lab 03.html  Lab 03.qmd  Lab 04.html  Lab 04.qmd  Lab02_eda_report_compare_common_features.html  Lab02_eda_report_rejected_train.html  Lab04_eda_compare_train_tuning.html  Lab04_eda_compare_train_tuning_ft.html  Lab_01.html  Lab_01.qmd  Lab_01.quarto_ipynb  Lab_02.html  Lab_02.qmd  Lab_03.html  Lab_03.qmd  Lab_04.html  Lab_04.qmd  Lab_04.quarto_ipynb  Lab_04.quarto_ipynb_1  Lab_04.quarto_ipynb_10  Lab_04.quarto_ipynb_2  Lab_04.quarto_ipynb_3  Lab_04.quarto_ipynb_4  Lab_04.quarto_ipynb_5  Lecture 01.html  (+14 more)
(+92 files in other folders)
