[project]
name = "iml4finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.4.0",
    "autogluon>=1.5.0",
    "dice-ml>=0.12",
    "duckdb>=1.4.3",
    "eli5>=0.16.0",
    "fastexcel>=0.18.0",
    "feature-engine>=1.9.3",
    "imbalanced-learn>=0.14.1",
    "jupyter>=1.1.1",
    "mljar-scikit-plot>=0.3.12",
    "pandarallel>=1.6.5",
    "plotnine>=0.15.2",
    "polars>=1.37.1",
    "pyale>=1.2.0",
    "quarto-cli>=1.8.27",
    "shap>=0.49.1",
    "ydata-profiling>=4.18.1",
    "yellowbrick>=1.5",
]
